--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "mdbootstrap": "^4.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
