--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -9,6 +9,8 @@
     "mdbootstrap": "^4.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
+    "react-owl-carousel": "^2.3.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
