--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -12,7 +12,9 @@
     "react-loadable": "^5.5.0",
     "react-owl-carousel": "^2.3.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "video-react": "^0.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
