--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
+    "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.8.2",
     "react": "^16.8.6",
