--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -14,6 +14,7 @@
     "react-owl-carousel": "^2.3.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-svg": "^10.0.10",
     "redux": "^4.0.1",
     "video-react": "^0.14.0"
   },
