--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-rc.3",
@@ -12,9 +13,10 @@
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
     "react-owl-carousel": "^2.3.1",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-svg": "^10.0.10",
+    "react-svg": "^10.0.11",
     "redux": "^4.0.1",
     "video-react": "^0.14.0"
   },
