--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
     "react-owl-carousel": "^2.3.1",
+    "react-player": "^1.11.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
