Manali modified ETRM Page

--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.0.1",
     "react-svg": "^10.0.11",
     "redux": "^4.0.1",
+    "sweetalert": "^2.1.2",
     "video-react": "^0.14.0"
   },
   "scripts": {
