--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -20,6 +20,7 @@
     "react-svg": "^10.0.11",
     "redux": "^4.0.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.17.6",
     "video-react": "^0.14.0"
   },
   "scripts": {
