--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-dropdowns": "^17.2.49",
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
@@ -13,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-facebook": "^8.0.4",
     "react-loadable": "^5.5.0",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-owl-carousel": "^2.3.1",
     "react-player": "^1.11.1",
     "react-render-html": "^0.6.0",
