--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -20,6 +20,7 @@
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-select-nested": "^1.0.5",
     "react-svg": "^10.0.11",
     "redux": "^4.0.1",
     "sweetalert": "^2.1.2",
