--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
+    "google-translate": "^3.0.0",
     "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.8.2",
@@ -14,6 +15,7 @@
     "react-dom": "^16.8.6",
     "react-facebook": "^8.0.4",
     "react-loadable": "^5.5.0",
+    "react-localization": "^1.0.15",
     "react-multiselect-checkboxes": "^0.1.1",
     "react-owl-carousel": "^2.3.1",
     "react-player": "^1.11.1",
