--- a/ui/admin/package.json
+++ b/ui/admin/package.json
@@ -13,6 +13,7 @@
     "jquery-validation": "^1.19.1",
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.12.0",
