--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-facebook": "^8.0.4",
+    "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
     "react-localization": "^1.0.15",
     "react-moment": "^0.9.6",
