--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -22,6 +22,7 @@
     "react-moment": "^0.9.6",
     "react-multiselect-checkboxes": "^0.1.1",
     "react-owl-carousel": "^2.3.1",
+    "react-phone-input-2": "^2.13.5",
     "react-player": "^1.11.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
