--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -25,6 +25,7 @@
     "react-player": "^1.11.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
+    "react-s3": "^1.3.1",
     "react-scripts": "3.0.1",
     "react-select-nested": "^1.0.5",
     "react-svg": "^10.0.11",
