--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -6,9 +6,14 @@
     "@syncfusion/ej2-react-dropdowns": "^17.2.49",
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
+    "counterpart": "^0.18.6",
     "font-awesome": "^4.7.0",
     "google-translate": "^3.0.0",
     "html2canvas": "^1.0.0-rc.3",
+    "i18next": "^19.6.0",
+    "i18next-browser-languagedetector": "^5.0.0",
+    "i18next-http-backend": "^1.0.16",
+    "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
@@ -16,6 +21,8 @@
     "react-dom": "^16.8.6",
     "react-facebook": "^8.0.4",
     "react-helmet": "^5.2.1",
+    "react-i18next": "^11.7.0",
+    "react-interpolate-component": "^0.12.0",
     "react-loadable": "^5.5.0",
     "react-localization": "^1.0.15",
     "react-moment": "^0.9.6",
@@ -29,6 +36,7 @@
     "react-scripts": "3.0.1",
     "react-select-nested": "^1.0.5",
     "react-svg": "^10.0.11",
+    "react-translate-component": "^0.15.1",
     "redux": "^4.0.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^8.17.6",
