--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.8.6",
     "react-facebook": "^8.0.4",
     "react-helmet": "^5.2.1",
