--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -15,6 +15,7 @@
     "i18next-http-backend": "^1.0.16",
     "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.4.1",
+    "jquery-validation": "^1.19.2",
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
     "react": "^16.8.6",
