--- a/ui/website/package.json
+++ b/ui/website/package.json
@@ -9,7 +9,9 @@
     "counterpart": "^0.18.6",
     "font-awesome": "^4.7.0",
     "google-translate": "^3.0.0",
-    "html2canvas": "^1.0.0-rc.3",
+    "html2canvas": "^1.0.0-rc.7",
+    "html2pdf": "0.0.11",
+    "html2pdf.js": "^0.9.2",
     "i18next": "^19.6.0",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.16",
